# router/app.go
@@ -25,6 +25,9 @@ func Router() *gin.Engine {
 	r.GET("/", service.GetIndex)
 	r.GET("/index", service.GetIndex)
 	r.GET("/toRegister", service.ToRegister)
+	r.GET("/toChat", service.ToChat)
+	r.GET("/chat", service.Chat)
+	r.POST("/searchFriends", service.SearchFriends)
 
 	// 用户模块
 	r.POST("/user/getUserList", service.GetUserList)
